<resources>
    <string name = "app_name">ManageSponsor</string>

    <!--login-->
    <string name = "login">Log In</string>
    <string name = "success">Success</string>
    <string name = "error_eng">Error</string>
    <string name="hint_id">아이디를 입력해주세요.</string>
    <string name="hint_pwd">비밀번호를 입력해주세요.</string>
    <string name = "login_info">성공회대학교 대학발전후원회 업무 알림 시스템</string>

    <!--bottom navi-->
    <string name = "action_agreement">약정</string>
    <string name = "action_schedule">일정</string>
    <string name = "action_log">로그</string>

    <!--agreement-->
    <string name = "pay_period">납입 기간 : &#160;</string>
    <string name = "pay_day">납입일 : %d</string>
    <string name = "pay_duration">%s ~ %s</string>
    <string name = "expire_cnt">마감까지 %d 일 전</string>

    <!--agree detail-->
    <string name = "title_person">회원 정보</string>
    <string name = "title_agree">약정 상세</string>
    <string name = "title_pay">납입 정보</string>
    <string name = "title_etc">기타</string>
    <string name = "sponsor_birth">생년월일</string>
    <string name="sponsor_name">회원명</string>
    <string name = "sponsor_contact">연락처</string>
    <string name="agree_id">약정 번호</string>
    <string name="agree_period">약정 기간</string>
    <string name="pay_month_day">월 납입일</string>
    <string name="agree_purpose">기부목적</string>
    <string name="pay_way">납입 방법</string>
    <string name="pay_month_money">월 납입액</string>
    <string name="account_info">납입 계좌</string>
    <string name="etc">비고</string>
    <string name="hint_input">내용 입력</string>
    <string name = "detail_agree">약정 상세 정보</string>
    <string name = "format_pay_day">%d 일</string>
    <string name = "format_pay">%,d 원</string>
    <string name = "wave">~</string>
    <string name = "rationale_title">권한 요청</string>
    <string name = "rationale_msg">전화를 걸기 위해 다음 권한이 필요합니다.</string>
    <string name = "permission_granted">권한이 허용되었습니다.</string>
    <string name = "permission_denied">권한이 거부되었습니다.</string>
    <string name="msg_done">종료한 약정은 후원회 홈페이지에서 확인할 수 있습니다.</string>
    <string name="title_done">정말 약정을 종료하시겠습니까?</string>
    <string name="go_expire">종료하기</string>

    <!--log-->
    <string name="request">신청</string>
    <string name="standard">정상</string>
    <string name="error">에러</string>
    <string name="agreement_id">약정번호 : %s</string>

    <!--schedule detail-->
    <string name="alert_month">매 월</string>
    <string name="alert_year">매 년</string>
    <string name="alert_once">안 함</string>
    <string name="hint_date">날짜를 선택해 주세요.</string>
    <string name="hint_schedule">일정을 입력해 주세요.</string>
    <string name="hint_alert">알람 주기를 선택해 주세요.</string>
    <string name = "detail_schedule">일정 상세 정보</string>
    <string name = "pick_date">%d.%d.%d</string>

    <!--main-->
    <string name="setting">설정</string>

    <!--etc-->
    <string name="ok">확인</string>
    <string name = "enrol">등록</string>
    <string name="cancel">취소</string>
</resources>
