<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:padding="5dp"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_agree_detail"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_title_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.24" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:id="@+id/gl_content_end"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AgreeDetailTitleText"
            android:text="@string/sponsor_name"
            app:layout_constraintEnd_toEndOf="@+id/gl_title_end" />

        <TextView
            android:id="@+id/text_agree_detail_name"
            style="@style/AgreeDetailContentText"
            tools:text="이지윤" />

        <!--약정 번호-->
        <TextView
            style="@style/AgreeDetailTitleText"
           android:text="@string/agree_id"
           app:layout_constraintTop_toTopOf="@+id/text_agree_detail_id" />

        <TextView
            android:id="@+id/text_agree_detail_id"
            style="@style/AgreeDetailContentText"
            app:layout_constraintTop_toBottomOf="@+id/text_agree_detail_name"
            tools:text="2011505152-11" />


        <!--약정기간-->
        <TextView
            style="@style/AgreeDetailTitleText"
          app:layout_constraintTop_toTopOf="@+id/text_agree_detail_period"
            android:text="@string/agree_period" />

        <TextView
            style="@style/AgreeDetailContentText"
            android:id="@+id/text_agree_detail_period"
            app:layout_constraintTop_toBottomOf="@+id/text_agree_detail_id"
            tools:text="2018.05.15 ~ 2018.10.19" />

        <!--월 납입일-->
        <TextView
           app:layout_constraintTop_toTopOf="@+id/text_agree_detail_day"
            style="@style/AgreeDetailTitleText"
            android:text="@string/pay_month_day" />

        <TextView
            style="@style/AgreeDetailContentText"
            android:id="@+id/text_agree_detail_day"
            app:layout_constraintTop_toBottomOf="@+id/text_agree_detail_period"
            tools:text="20일" />

        <!--기부 목적-->
        <TextView
            style="@style/AgreeDetailTitleText"
          app:layout_constraintTop_toTopOf="@+id/text_agree_detail_purpose"
            android:text="@string/agree_purpose" />

        <TextView
            style="@style/AgreeDetailContentText"
            app:layout_constraintTop_toBottomOf="@+id/text_agree_detail_day"
            android:id="@+id/text_agree_detail_purpose"
            tools:text="성공회대학교 소프트웨어공학 발전기금 (장학금)" />

        <!--납입 방법-->
        <TextView
            style="@style/AgreeDetailTitleText"
            app:layout_constraintTop_toTopOf="@+id/text_agree_detail_way"
            android:text="@string/pay_way" />

        <TextView
            style="@style/AgreeDetailContentText"
            android:id="@+id/text_agree_detail_way"
            app:layout_constraintTop_toBottomOf="@+id/text_agree_detail_purpose"
            tools:text="CMS" />

        <!--월 납입액-->
        <TextView
           app:layout_constraintTop_toTopOf="@+id/text_agree_detail_money"
            style="@style/AgreeDetailTitleText"
            android:text="@string/pay_month_money" />

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/text_agree_detail_way"
            style="@style/AgreeDetailContentText"
            android:id="@+id/text_agree_detail_money"
            tools:text="10,000" />

        <TextView
            style="@style/AgreeDetailTitleText"
            app:layout_constraintTop_toTopOf="@+id/text_agree_detail_account"
            android:text="@string/account_info" />

        <TextView
            style="@style/AgreeDetailContentText"
            android:id="@+id/text_agree_detail_account"
            app:layout_constraintTop_toBottomOf="@+id/text_agree_detail_money"
            tools:text="김혜리 / 우리 / 11021231-14-2321231" />

        <TextView
            style="@style/AgreeDetailTitleText"
         app:layout_constraintTop_toTopOf="@+id/text_agree_detail_etc"
            android:text="@string/etc" />

        <TextView
            style="@style/AgreeDetailContentText"
            android:lineSpacingExtra="7dp"
            android:id="@+id/text_agree_detail_etc"
            app:layout_constraintTop_toBottomOf="@+id/text_agree_detail_account"
            tools:text="아핫 핫핫핫ㅅ핫 \n핫핫핫핫" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>