<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/text_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/hint_date"
            android:textColor="@color/colorDefaultText"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_schedule"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:padding="7dp"
            android:textColor="@color/colorStandard"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_title"
            tools:text="2018.10.15" />

        <ImageView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "8dp"
            android:padding = "10dp"
            android:src = "@drawable/ic_weekly_calendar"
            app:layout_constraintStart_toEndOf = "@+id/text_detail_date"
            app:layout_constraintTop_toBottomOf = "@+id/text_detail_title" />

        <View
            android:id="@+id/view_line_top"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorGrey"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_date" />

        <TextView
            android:id="@+id/text_detail_title_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/hint_schedule"
            android:textColor="@color/colorDefaultText"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/view_line_top" />

        <EditText
            android:id="@+id/edit_detail_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_schedule"
            android:lineSpacingExtra="10dp"
            android:maxLength="500"
            android:minLines="10"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_title_input" />

        <View
            android:id="@+id/view_line_bot"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorGrey"
            app:layout_constraintTop_toBottomOf="@+id/edit_detail_input" />

        <TextView
            android:id="@+id/text_detail_title_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hint_alert"
            app:layout_constraintTop_toBottomOf="@+id/view_line_bot" />

        <Button
            android:id="@+id/btn_detail_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/alert_once"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_title_alert" />

        <Button
            android:id="@+id/btn_detail_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/alert_month"
            app:layout_constraintStart_toEndOf="@+id/btn_detail_once"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_title_alert" />


        <Button
            android:id="@+id/btn_detail_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/alert_year"
            app:layout_constraintStart_toEndOf="@+id/btn_detail_month"
            app:layout_constraintTop_toBottomOf="@+id/text_detail_title_alert" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>