<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:app = "http://schemas.android.com/apk/res-auto"
        xmlns:tools = "http://schemas.android.com/tools"
        >

    <data>

        <variable
                name = "today"
                type = "java.util.Date"
                />

        <variable
                name = "viewModel"
                type = "jiyun.com.managesponsor.scheduledetail.ScheduleDetailFragment"
                />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            >

             <androidx.constraintlayout.widget.Guideline
                     android:id = "@+id/gl_sche_detail_top"
                     android:layout_width = "wrap_content"
                     android:layout_height = "wrap_content"
                     android:orientation = "horizontal"
                     app:layout_constraintGuide_percent = "0.1"
                     />
    
    
        <!--content-->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id = "@+id/con_sche_detail"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:background = "@drawable/background_dialog_content"
                app:layout_constraintTop_toTopOf = "@+id/gl_sche_detail_top"
                >

            <androidx.constraintlayout.widget.Guideline
                    android:id = "@+id/gl_sche_con_top"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:orientation = "horizontal"
                    app:layout_constraintGuide_percent = "0.15"
                    />

            <androidx.constraintlayout.widget.Guideline
                    android:id = "@+id/gl_sche_con_start"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:orientation = "vertical"
                    app:layout_constraintGuide_percent = "0.3"
                    />

            <androidx.constraintlayout.widget.Guideline
                    android:id = "@+id/gl_sche_con_sub_end"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:orientation = "vertical"
                    app:layout_constraintGuide_percent = "0.7"
                    />

              <TextView
                      android:id = "@+id/text_detail_title"
                      android:layout_width = "wrap_content"
                      android:layout_height = "wrap_content"
                      android:fontFamily = "@font/godo_mid"
                      android:gravity = "center"
                      android:text = "@string/hint_date"
                      android:textColor = "@color/colorDefaultText"
                      android:textSize = "13sp"
                      app:layout_constraintEnd_toEndOf = "@+id/gl_sche_con_sub_end"
                      app:layout_constraintStart_toStartOf = "@+id/gl_sche_con_start"
                      app:layout_constraintTop_toBottomOf = "@+id/gl_sche_con_top"
                      />

        <TextView
                android:id = "@+id/text_detail_date"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop = "10dp"
                android:background = "@drawable/background_schedule"
                android:fontFamily = "@font/montserrat_medium"
                android:gravity = "center"
                android:padding = "9dp"
                android:text = "@{today}"
                android:textColor = "@color/colorDefaultText"
                android:textSize = "13sp"
                app:layout_constraintStart_toStartOf = "@+id/gl_sche_con_start"
                app:layout_constraintTop_toBottomOf = "@+id/text_detail_title"
                tools:text = "2018.10.15"
                />

        <ImageView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop = "8dp"
                android:onClick = "@{() -> viewModel.onCalendarClick()}"
                android:padding = "10dp"
                android:src = "@drawable/ic_weekly_calendar"
                app:layout_constraintEnd_toEndOf = "@+id/gl_sche_con_sub_end"
                app:layout_constraintStart_toEndOf = "@+id/text_detail_date"
                app:layout_constraintTop_toBottomOf = "@+id/text_detail_title"
                />

        <View
                android:id = "@+id/view_line_top"
                android:layout_width = "match_parent"
                android:layout_height = "1dp"
                android:layout_marginTop = "15dp"
                android:background = "@color/colorDefaultGray"
                app:layout_constraintTop_toBottomOf = "@+id/text_detail_date"
                />

            <androidx.constraintlayout.widget.Guideline
                    android:id = "@+id/gl_sche_edit_start"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:orientation = "vertical"
                    app:layout_constraintGuide_percent = "0.05"
                    />

        <androidx.constraintlayout.widget.Guideline
                android:id = "@+id/gl_sche_con_end"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:orientation = "vertical"
                app:layout_constraintGuide_percent = "0.95"
                />

        <EditText
                android:id = "@+id/edit_detail_input"
                android:layout_width = "0dp"
                android:layout_height = "wrap_content"
                android:layout_marginTop = "10dp"
                android:background = "@drawable/background_schedule"
                android:fontFamily = "@font/kopub_dotum_light"
                android:gravity = "top"
                android:hint = "@string/hint_schedule"
                android:lineSpacingExtra = "3dp"
                android:maxLength = "500"
                android:minLines = "10"
                android:padding = "7dp"
                android:textSize = "13sp"
                app:layout_constraintEnd_toEndOf = "@+id/gl_sche_con_end"
                app:layout_constraintStart_toStartOf = "@+id/gl_sche_edit_start"
                app:layout_constraintTop_toBottomOf = "@+id/view_line_top"
                />

        <View
                android:id = "@+id/view_line_bot"
                android:layout_width = "match_parent"
                android:layout_height = "1dp"
                android:layout_marginTop = "10dp"
                android:background = "@color/colorDefaultGray"
                app:layout_constraintTop_toBottomOf = "@+id/edit_detail_input"
                />

        <TextView
                android:id = "@+id/text_detail_title_alert"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop = "10dp"
                android:fontFamily = "@font/godo_mid"
                android:text = "@string/hint_alert"
                android:textColor = "@color/colorDefaultText"
                android:textSize = "13sp"
                app:layout_constraintEnd_toEndOf = "@+id/gl_sche_con_sub_end"
                app:layout_constraintStart_toStartOf = "@+id/gl_sche_con_start"
                app:layout_constraintTop_toBottomOf = "@+id/view_line_bot"
                />
        
        
            <!--alert button-->
            <TextView
                    android:id = "@+id/btn_detail_once"
                    style = "@style/BtnAlert"
                    android:onClick="@{viewModel::onAlertBtnClick}"
                    android:background = "@drawable/background_alert_btn"
                    android:text = "@string/alert_once"
                    app:layout_constraintEnd_toStartOf = "@+id/btn_detail_month"
                    app:layout_constraintHorizontal_chainStyle = "spread"
                    app:layout_constraintStart_toStartOf = "@+id/gl_sche_edit_start"
                    app:layout_constraintTop_toBottomOf = "@+id/text_detail_title_alert"
                    />

        <TextView
                android:id = "@+id/btn_detail_month"
                style = "@style/BtnAlert"
                android:onClick="@{viewModel::onAlertBtnClick}"
                android:background = "@drawable/background_alert_btn"
                android:text = "@string/alert_month"
                app:layout_constraintEnd_toStartOf = "@+id/btn_detail_year"
                app:layout_constraintStart_toEndOf = "@+id/btn_detail_once"
                app:layout_constraintTop_toBottomOf = "@+id/text_detail_title_alert"
                />


        <TextView
                android:id = "@+id/btn_detail_year"
                style = "@style/BtnAlert"
                android:text = "@string/alert_year"
                android:onClick="@{viewModel::onAlertBtnClick}"
                app:layout_constraintEnd_toEndOf = "@+id/gl_sche_con_end"
                app:layout_constraintStart_toEndOf = "@+id/btn_detail_month"
                app:layout_constraintTop_toBottomOf = "@+id/text_detail_title_alert"
                />


        <androidx.constraintlayout.widget.Guideline
                android:id = "@+id/gl_sche_detial_half"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:orientation = "vertical"
                app:layout_constraintGuide_percent = "0.5"
                />
        
            <!--Button-->
            <TextView
                    android:id = "@+id/btn_enroll"
                    style = "@style/BtnScheduleDetail"
                    android:layout_width = "0dp"
                    android:layout_height = "wrap_content"
                    android:background = "@drawable/background_enroll_btn"
                    android:text = "@string/enrol"
                    app:layout_constraintBottom_toBottomOf = "parent"
                    app:layout_constraintEnd_toStartOf = "@+id/gl_sche_detial_half"
                    app:layout_constraintStart_toStartOf = "parent"
                    app:layout_constraintTop_toBottomOf = "@+id/btn_detail_year"
                    />

        <TextView
                android:id = "@+id/btn_cancel"
                style = "@style/BtnScheduleDetail"
                android:layout_width = "0dp"
                android:layout_height = "wrap_content"
                android:background = "@drawable/background_cancel_btn"
                android:text = "@string/cancel"
                app:layout_constraintBottom_toBottomOf = "parent"
                app:layout_constraintEnd_toEndOf = "parent"
                app:layout_constraintStart_toEndOf = "@+id/gl_sche_detial_half"
                app:layout_constraintTop_toBottomOf = "@+id/btn_detail_year"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


           <androidx.constraintlayout.widget.Guideline
                   android:id = "@+id/gl_sche_detail_start"
                   android:layout_width = "wrap_content"
                   android:layout_height = "wrap_content"
                   android:orientation = "vertical"
                   app:layout_constraintGuide_percent = "0.05"
                   />

        <androidx.constraintlayout.widget.Guideline
                android:id = "@+id/gl_sche_detail_circle_start"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:orientation = "vertical"
                app:layout_constraintGuide_percent = "0.3"
                />

        <androidx.constraintlayout.widget.Guideline
                android:id = "@+id/gl_sche_detail_circle_end"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:orientation = "vertical"
                app:layout_constraintGuide_percent = "0.7"
                />

        <ImageView
                android:id = "@+id/img_sche_detail_top"
                android:layout_width = "0dp"
                android:layout_height = "0dp"
                android:src = "@drawable/img_contract"
                app:layout_constraintDimensionRatio = "1:1"
                app:layout_constraintEnd_toEndOf = "@+id/gl_sche_detail_circle_end"
                app:layout_constraintStart_toStartOf = "@+id/gl_sche_detail_circle_start"
                app:layout_constraintTop_toTopOf = "parent"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>